# tessera

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  gpu.yml
benchmarks/: README.md  bench_attention.py  bench_throughput.py
docs/: architecture.md  distillation.md  kernels.md  serving.md
examples/: interp_demo.py  serve.py  train_distill.py
jax_ref/: __init__.py  model.py
tessera/: __init__.py  cli.py  config.py
tessera-rs/: Cargo.toml  README.md
tessera-rs/src/: api.rs  engine.rs  gateway.rs  lib.rs  main.rs  py.rs  scheduler.rs
tessera-rs/tests/: gateway.rs
tessera/data/: __init__.py  multimodal.py  text.py  tokenizer.py
tessera/distill/: __init__.py  checkpoint.py  fsdp.py  losses.py  trainer.py
tessera/interp/: __init__.py  hooks.py  induction.py  logit_lens.py
tessera/kernels/: __init__.py  reference.py
tessera/kernels/cuda/: README.md  flash_attention.cu  rmsnorm.cu
tessera/kernels/triton/: __init__.py  flash_attention.py  quant_matmul.py  rmsnorm.py  swiglu.py
tessera/model/: __init__.py  attention.py  kv_cache.py  mlp.py  rmsnorm.py  rope.py  transformer.py
tessera/profiling/: __init__.py  nvtx.py
tessera/quant/: __init__.py  awq.py  fp8.py  int8.py
tessera/serve/: __init__.py  api.py  engine.py  paged_kv.py  scheduler.py  speculative.py
tests/: conftest.py  test_cli.py  test_data.py  test_distill.py  test_engine.py  test_fsdp_distributed.py  test_interp.py  test_jax_parity.py  test_kernels_gpu.py  test_model.py  test_paged_kv.py  test_quant.py  test_reference_ops.py  test_scheduler.py  test_speculative.py
